<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/linecolor"
    android:layout_height="match_parent">

    <com.fhzc.app.android.android.ui.view.widget.CommonToolBar
        android:layout_alignParentTop="true"
        android:id="@+id/activityDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mToolBar_title="@string/forget_password_again"
        app:mToolBar_titleColor="@color/activity_text_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/linecolor"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_menu_height">
        <TextView
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/sixteenDp"
            android:textSize="@dimen/foureenSp"
            android:textColor="@color/textpassColor"
            android:text="@string/phone_password_again"
            android:layout_width="@dimen/fiftynineDp"
            android:layout_height="match_parent" />
        <EditText
            android:inputType="number"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/sixteenDp"
            android:hint="@string/input_phone_password"
            android:textCursorDrawable="@null"
            android:cursorVisible="true"
            android:textColorHint="@color/texthintColor"
            android:layout_marginLeft="@dimen/thirtyfivedp"
            android:id="@+id/passwordText"
            android:background="@null"
            android:textSize="@dimen/elevenDp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/line_size"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_menu_height">
        <TextView
            android:id="@+id/identifyCodeText"
            android:gravity="center"
            android:layout_marginLeft="@dimen/sixteenDp"
            android:textSize="@dimen/foureenSp"
            android:textColor="@color/textpassColor"
            android:text="@string/identify_password"

            android:layout_width="@dimen/fiftynineDp"
            android:layout_height="match_parent" />
        <com.fhzc.app.android.android.ui.view.widget.CountDownTimeButton
            android:background="@drawable/forget_password_button_bg"
            android:layout_centerInParent="true"
            android:id="@+id/sentCodeText"
            android:layout_marginTop="@dimen/fourDp"
            android:layout_marginBottom="@dimen/fourDp"
            android:layout_marginRight="@dimen/tenDp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="@color/appColorBlue"
            android:textSize="12sp"
            android:text="@string/sent_identify_password"
            android:layout_width="@dimen/nintyfiveDp"
            android:layout_height="match_parent" />
        <EditText
            android:layout_toRightOf="@id/identifyCodeText"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/sixteenDp"
            android:textCursorDrawable="@null"
            android:cursorVisible="true"
            android:hint="@string/input_indentify_password"
            android:textColorHint="@color/texthintColor"
            android:layout_marginLeft="@dimen/thirtyfivedp"
            android:id="@+id/passwordAgainText"
            android:background="@null"
            android:layout_toLeftOf="@id/sentCodeText"
            android:textSize="@dimen/elevenDp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </RelativeLayout>
    <TextView
        android:id="@+id/forgetPassNext"
        android:layout_marginRight="@dimen/tenDp"
        android:layout_marginLeft="@dimen/tenDp"
        android:background="@color/appColorBlue"
        android:layout_marginTop="@dimen/sixteenDp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/foureenSp"
        android:text="@string/next_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifityDp" />



</LinearLayout>
