<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:contaxt="com.fhzc.app.android.android.ui.view.dialog.ActivityPopUpDialog">


    <ImageView
        android:id="@+id/activityBacksImageView"
        android:padding="@dimen/tenDp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/tenDp"
        android:layout_marginTop="@dimen/tenDp"
        android:src="@mipmap/deletes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/tenDp"
        android:id="@+id/sureSignUpTextView"
        android:textSize="@dimen/textSixteenDp"
        android:gravity="center_horizontal"
        android:text="@string/expectte_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/itemActivityLauout"
        android:layout_marginTop="@dimen/tenDp"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/textmapDp"
        android:layout_marginRight="@dimen/textmapDp"
        android:layout_below="@id/sureSignUpTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/nameTextView"
            android:background="@null"
            android:hint="@string/signedup_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginTop="@dimen/fourDp"
            android:background="@color/ht_diverLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"></View>

        <RelativeLayout
            android:layout_marginTop="@dimen/Report_time_text_size"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/identifyCodeText"
                android:background="@null"
                android:hint="@string/expectte_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>


        <View
            android:layout_marginTop="@dimen/fourDp"
            android:background="@color/ht_diverLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"></View>



    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/bottom_menu_img_size"
        android:layout_below="@+id/itemActivityLauout"
        android:id="@+id/signUpSureOtherTextView"
        android:textColor="@color/white"
        android:background="@color/title_text_7"
        android:paddingRight="@dimen/sixtyDP"
        android:paddingLeft="@dimen/sixtyDP"
        android:paddingTop="@dimen/Report_Text_margin_Left_size"
        android:paddingBottom="@dimen/Report_Text_margin_Left_size"
        android:layout_centerInParent="true"
        android:text="@string/sure_signedup_forother_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
