<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/linecolor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">


    <com.fhzc.app.android.android.ui.view.widget.CommonToolBar
        android:layout_alignParentTop="true"
        android:id="@+id/activityDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mToolBar_background="@color/transparence"
        app:mToolBar_title="@string/my_password"
        app:mToolBar_titleColor="@color/activity_text_color" />
    <View
        android:background="@color/linecolor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_menu_img_size"></View>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_menu_height">
        <TextView
            android:layout_marginLeft="@dimen/sixteenDp"
            android:textSize="@dimen/foureenSp"
            android:textColor="@color/textpassColor"
            android:text="@string/my_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText

            android:layout_marginRight="@dimen/sixteenDp"
            android:hint="@string/setting_pass"
            android:textColorHint="@color/texthintColor"
            android:layout_marginLeft="@dimen/thirtyfivedp"
            android:id="@+id/passwordText"
            android:background="@null"
            android:textSize="@dimen/elevenDp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/line_size"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_menu_height">
        <TextView
            android:layout_marginLeft="@dimen/sixteenDp"
            android:textSize="@dimen/foureenSp"
            android:textColor="@color/textpassColor"
            android:text="@string/sure_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText

            android:layout_marginRight="@dimen/sixteenDp"
            android:hint="@string/sure_password_again"
            android:textColorHint="@color/texthintColor"
            android:layout_marginLeft="@dimen/thirtyfivedp"
            android:id="@+id/passwordAgainText"
            android:background="@null"
            android:textSize="@dimen/elevenDp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <TextView
        android:layout_marginRight="@dimen/tenDp"
        android:layout_marginLeft="@dimen/tenDp"
        android:background="@color/appColorBlue"
        android:layout_marginTop="@dimen/sixteenDp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/foureenSp"
        android:text="@string/sure_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifityDp" />



</LinearLayout>
