<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:main_title="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/linecolor"
    android:layout_height="match_parent">

    <com.fhzc.app.android.android.ui.view.widget.CommonToolBar
        android:layout_alignParentTop="true"
        android:id="@+id/activityDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mToolBar_background="@color/transparence"
        app:mToolBar_title="@string/set_password"
        app:mToolBar_titleColor="@color/activity_text_color" />


    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_menu_height">
        <TextView
            android:gravity="center"

            android:layout_marginLeft="@dimen/sixteenDp"
            android:textSize="@dimen/foureenSp"
            android:textColor="@color/textpassColor"
            android:text="设置密码"
            android:layout_width="@dimen/fiftynineDp"
            android:layout_height="match_parent" />
        <EditText
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/sixteenDp"
            android:hint="@string/new_hint_password"
            android:textColorHint="@color/texthintColor"
            android:layout_marginLeft="@dimen/thirtyfivedp"
            android:id="@+id/passwordText"
            android:background="@null"
            android:textSize="@dimen/elevenDp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/line_size"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_menu_height">
        <TextView
            android:id="@+id/identifyCodeText"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/sixteenDp"
            android:textSize="@dimen/foureenSp"
            android:textColor="@color/textpassColor"
            android:text="@string/sure_again_password"
            android:layout_width="@dimen/fiftynineDp"
            android:layout_height="match_parent" />

        <EditText
            android:layout_toRightOf="@id/identifyCodeText"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/sixteenDp"
            android:hint="@string/inout_next_password"
            android:textColorHint="@color/texthintColor"
            android:layout_marginLeft="@dimen/thirtyfivedp"
            android:id="@+id/passwordAgainText"
            android:background="@null"
            android:textSize="@dimen/elevenDp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </RelativeLayout>
    <TextView
        android:id="@+id/forgetPassNext"
        android:layout_marginRight="@dimen/tenDp"
        android:layout_marginLeft="@dimen/tenDp"
        android:background="@color/appColorBlue"
        android:layout_marginTop="@dimen/sixteenDp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/foureenSp"
        android:text="确认密码"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifityDp" />



</LinearLayout>
