<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:main_title="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/linecolor"
    android:layout_height="match_parent">

    <com.fhzc.app.android.android.ui.view.widget.CommonToolBar
        android:layout_alignParentTop="true"
        android:id="@+id/activityDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mToolBar_title="@string/chenge_password_again"
        app:mToolBar_titleColor="@color/activity_text_color" />


    <LinearLayout
        android:layout_marginTop="@dimen/twentyDp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"

            android:layout_marginLeft="@dimen/sixteenDp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:textSize="@dimen/sixteenDp"
            android:textColor="@color/textpassColor"
            android:text="新  密  码"

            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <EditText
            android:gravity="center_vertical"

            android:hint="@string/new_hint_password"
            android:textColorHint="@color/texthintColor"
            android:layout_marginLeft="@dimen/thirtyfivedp"
            android:id="@+id/passwordText"

            android:inputType="textPassword"
            android:background="@null"
            android:textSize="@dimen/thirteenDp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/line_size"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/identifyCodeText"
            android:gravity="center_vertical"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:layout_marginLeft="@dimen/sixteenDp"
            android:textSize="@dimen/sixteenDp"
            android:textColor="@color/textpassColor"
            android:text="@string/sure_again_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_toRightOf="@id/identifyCodeText"
            android:gravity="center_vertical"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:layout_marginRight="@dimen/sixteenDp"
            android:hint="@string/inout_next_password"
            android:textColorHint="@color/texthintColor"
            android:layout_marginLeft="30dp"
            android:id="@+id/passwordAgainText"
            android:background="@null"
            android:inputType="textPassword"
            android:textSize="@dimen/thirteenDp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>
    <TextView
        android:id="@+id/changePassNext"
        android:layout_marginRight="@dimen/tenDp"
        android:layout_marginLeft="@dimen/tenDp"
        android:background="@drawable/common_blue_selector_bg"
        android:layout_marginTop="@dimen/sixteenDp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="确认修改"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifityDp" />



</LinearLayout>
